Completed oil step

--- a/oil_and_gas.ipynb
+++ b/oil_and_gas.ipynb
@@ -1338,10 +1338,35 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 9ce2631] Completed filtered_gas step\n",
+      " 2 files changed, 3437 insertions(+), 33 deletions(-)\n",
+      " create mode 100644 oil_and_gas_answers.ipynb\n",
+      "Enumerating objects: 6, done.\n",
+      "Counting objects: 100% (6/6), done.\n",
+      "Delta compression using up to 8 threads\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (4/4), 85.04 KiB | 8.50 MiB/s, done.\n",
+      "Total 4 (delta 2), reused 0 (delta 0), pack-reused 0 (from 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "To github.com:andyheggs/data-us-oil-and-gas-production.git\n",
+      "   8474a3a..9ce2631  master -> master\n"
+     ]
+    }
+   ],
    "source": [
-    "."
+    "!git add -A\n",
+    "\n",
+    "!git commit -m 'Completed filtered_gas step'\n",
+    "\n",
+    "!git push origin master"
    ]
   },
   {
@@ -1355,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1393,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1418,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -1569,7 +1594,7 @@
        "[3 rows x 36 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1861,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
