Completed filtered_gas step

--- a/oil_and_gas.ipynb
+++ b/oil_and_gas.ipynb
@@ -1873,10 +1873,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master f38e137] Completed oil step\n",
+      " 1 file changed, 34 insertions(+), 9 deletions(-)\n",
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
+      "Delta compression using up to 8 threads\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 804 bytes | 804.00 KiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0), pack-reused 0 (from 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "To github.com:andyheggs/data-us-oil-and-gas-production.git\n",
+      "   9ce2631..f38e137  master -> master\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add -A\n",
+    "\n",
+    "!git commit -m 'Completed oil step'\n",
+    "\n",
+    "!git push origin master"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merging Oil and Gas Production "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gas</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2009</th>\n",
+       "      <td>856876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>881622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2011</th>\n",
+       "      <td>936163</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Gas\n",
+       "Year        \n",
+       "2009  856876\n",
+       "2010  881622\n",
+       "2011  936163"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'filtered_yearly_oil_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [30], line 7\u001b[0m\n\u001b[1;32m      2\u001b[0m total_gas\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m [ \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGas\u001b[39m\u001b[38;5;124m'\u001b[39m ]\n\u001b[1;32m      3\u001b[0m display(total_gas\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m3\u001b[39m))\n\u001b[0;32m----> 7\u001b[0m total_oil \u001b[38;5;241m=\u001b[39m \u001b[43mfiltered_yearly_oil_df\u001b[49m\u001b[38;5;241m.\u001b[39mfilter(items\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mU.S. Crude Oil\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      8\u001b[0m total_oil\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m [ \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCrude Oil\u001b[39m\u001b[38;5;124m'\u001b[39m ]\n\u001b[1;32m      9\u001b[0m total_oil\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m3\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'filtered_yearly_oil_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "total_gas = filtered_yearly_gas_df.filter(items=['U.S.'])\n",
+    "total_gas.columns = [ 'Gas' ]\n",
+    "display(total_gas.head(3))\n",
+    "\n",
+    "\n",
+    "\n",
+    "total_oil = filtered_yearly_oil_df.filter(items=['U.S. Crude Oil'])\n",
+    "total_oil.columns = [ 'Crude Oil' ]\n",
+    "total_oil.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'total_oil' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [31], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m merged_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([\u001b[43mtotal_oil\u001b[49m, total_gas], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcolumns\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m merged_df\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'total_oil' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "merged_df = pd.concat([total_oil, total_gas], axis='columns')\n",
+    "merged_df"
+   ]
   }
  ],
  "metadata": {
