--- a/oil_and_gas.ipynb
+++ b/oil_and_gas.ipynb
@@ -1333,24 +1333,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master ce2538b] Completed filtered_gas step\n",
-      " 2 files changed, 149 insertions(+), 4 deletions(-)\n",
-      "Enumerating objects: 7, done.\n",
-      "Counting objects: 100% (7/7), done.\n",
-      "Delta compression using up to 8 threads\n",
-      "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (4/4), 1.40 KiB | 718.00 KiB/s, done.\n",
-      "Total 4 (delta 3), reused 0 (delta 0), pack-reused 0 (from 0)\n",
-      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
-      "To github.com:andyheggs/data-us-oil-and-gas-production.git\n",
-      "   f38e137..ce2538b  master -> master\n"
+      "On branch master\n",
+      "nothing to commit, working tree clean\n",
+      "Everything up-to-date\n"
      ]
     }
    ],
@@ -1397,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "metadata": {
     "scrolled": true
    },
@@ -2011,19 +2003,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "find . -iname \"*.py\" -not -path \"./tests/*\" | xargs -n1 -I {}  pylint --output-format=colorized {}; true\n",
+      "xargs: warning: options --max-args and --replace/-I/-i are mutually exclusive, ignoring previous --max-args value\n",
+      "PYTHONDONTWRITEBYTECODE=1 pytest -v --color=yes\n",
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.10.6, pytest-7.1.3, pluggy-1.0.0 -- /home/aheggs/.pyenv/versions/3.10.6/envs/lewagon/bin/python\n",
+      "cachedir: .pytest_cache\n",
+      "rootdir: /home/aheggs/code/andyheggs/02-Data-Toolkit/01-Data-Analysis/data-us-oil-and-gas-production\n",
+      "plugins: anyio-3.6.2, asyncio-0.19.0\n",
+      "asyncio: mode=strict\n",
+      "collected 10 items                                                             \u001b[0m\n",
+      "\n",
+      "tests/test_date.py::TestDate::test_month_column_is_a_datetime \u001b[32mPASSED\u001b[0m\u001b[32m     [ 10%]\u001b[0m\n",
+      "tests/test_filtered_gas.py::TestFilteredGas::test_yearly_gas_production_df_has_the_right_shape \u001b[32mPASSED\u001b[0m\u001b[32m [ 20%]\u001b[0m\n",
+      "tests/test_full_gas.py::TestFullGas::test_df_has_the_right_index \u001b[32mPASSED\u001b[0m\u001b[32m  [ 30%]\u001b[0m\n",
+      "tests/test_full_gas.py::TestFullGas::test_df_has_the_right_shape \u001b[32mPASSED\u001b[0m\u001b[32m  [ 40%]\u001b[0m\n",
+      "tests/test_full_gas.py::TestFullGas::test_df_has_the_right_values \u001b[32mPASSED\u001b[0m\u001b[32m [ 50%]\u001b[0m\n",
+      "tests/test_merged_dataframes.py::TestMergedDataframes::test_merged_df_has_the_right_shape \u001b[31mFAILED\u001b[0m\u001b[31m [ 60%]\u001b[0m\n",
+      "tests/test_merged_dataframes.py::TestMergedDataframes::test_yearly_oil_value_2009 \u001b[31mFAILED\u001b[0m\u001b[31m [ 70%]\u001b[0m\n",
+      "tests/test_oil.py::TestOil::test_df_has_the_right_index \u001b[31mFAILED\u001b[0m\u001b[31m           [ 80%]\u001b[0m\n",
+      "tests/test_oil.py::TestOil::test_df_has_the_right_shape \u001b[31mFAILED\u001b[0m\u001b[31m           [ 90%]\u001b[0m\n",
+      "tests/test_oil.py::TestOil::test_df_has_the_right_values \u001b[31mFAILED\u001b[0m\u001b[31m          [100%]\u001b[0m\n",
+      "\n",
+      "=================================== FAILURES ===================================\n",
+      "\u001b[31m\u001b[1m___________ TestMergedDataframes.test_merged_df_has_the_right_shape ____________\u001b[0m\n",
+      "\u001b[1m\u001b[31m/home/aheggs/.pyenv/versions/3.10.6/envs/lewagon/lib/python3.10/site-packages/nbresult/__init__.py\u001b[0m:88: in setUp\n",
+      "    result_file = _locate_pickle(name)\n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
+      "\n",
+      "name = 'merged_dataframes'\n",
+      "\n",
+      "    \u001b[94mdef\u001b[39;49;00m \u001b[92m_locate_pickle\u001b[39;49;00m(name):\n",
+      "        \u001b[33m'''Find pickle file based on its name.\u001b[39;49;00m\n",
+      "    \u001b[33m    Assumes unicity of pickle name from first `tests` parent folder above cwd\u001b[39;49;00m\n",
+      "    \u001b[33m    '''\u001b[39;49;00m\n",
+      "        cwd = os.getcwd()\n",
+      "    \n",
+      "        \u001b[94mwhile\u001b[39;49;00m \u001b[95mnot\u001b[39;49;00m os.path.isdir(os.path.join(cwd, \u001b[33m'\u001b[39;49;00m\u001b[33mtests\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)):\n",
+      "            cwd = os.path.dirname(cwd)\n",
+      "            \u001b[94mif\u001b[39;49;00m cwd == os.sep:\n",
+      "                \u001b[94mraise\u001b[39;49;00m \u001b[96mNameError\u001b[39;49;00m(\n",
+      "                    \u001b[33m\"\u001b[39;49;00m\u001b[33mCould not find /tests directory in any parent folder\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)\n",
+      "    \n",
+      ">       pickle_path = glob.glob(\n",
+      "            os.path.abspath(os.path.join(cwd, \u001b[33m'\u001b[39;49;00m\u001b[33m**\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[33mf\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\u001b[33m{\u001b[39;49;00mname\u001b[33m}\u001b[39;49;00m\u001b[33m.pickle\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)), recursive=\u001b[94mTrue\u001b[39;49;00m)[\u001b[94m0\u001b[39;49;00m]\n",
+      "\u001b[1m\u001b[31mE       IndexError: list index out of range\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31m/home/aheggs/.pyenv/versions/3.10.6/envs/lewagon/lib/python3.10/site-packages/nbresult/__init__.py\u001b[0m:105: IndexError\n",
+      "\u001b[31m\u001b[1m_______________ TestMergedDataframes.test_yearly_oil_value_2009 ________________\u001b[0m\n",
+      "\u001b[1m\u001b[31m/home/aheggs/.pyenv/versions/3.10.6/envs/lewagon/lib/python3.10/site-packages/nbresult/__init__.py\u001b[0m:88: in setUp\n",
+      "    result_file = _locate_pickle(name)\n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
+      "\n",
+      "name = 'merged_dataframes'\n",
+      "\n",
+      "    \u001b[94mdef\u001b[39;49;00m \u001b[92m_locate_pickle\u001b[39;49;00m(name):\n",
+      "        \u001b[33m'''Find pickle file based on its name.\u001b[39;49;00m\n",
+      "    \u001b[33m    Assumes unicity of pickle name from first `tests` parent folder above cwd\u001b[39;49;00m\n",
+      "    \u001b[33m    '''\u001b[39;49;00m\n",
+      "        cwd = os.getcwd()\n",
+      "    \n",
+      "        \u001b[94mwhile\u001b[39;49;00m \u001b[95mnot\u001b[39;49;00m os.path.isdir(os.path.join(cwd, \u001b[33m'\u001b[39;49;00m\u001b[33mtests\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)):\n",
+      "            cwd = os.path.dirname(cwd)\n",
+      "            \u001b[94mif\u001b[39;49;00m cwd == os.sep:\n",
+      "                \u001b[94mraise\u001b[39;49;00m \u001b[96mNameError\u001b[39;49;00m(\n",
+      "                    \u001b[33m\"\u001b[39;49;00m\u001b[33mCould not find /tests directory in any parent folder\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)\n",
+      "    \n",
+      ">       pickle_path = glob.glob(\n",
+      "            os.path.abspath(os.path.join(cwd, \u001b[33m'\u001b[39;49;00m\u001b[33m**\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[33mf\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\u001b[33m{\u001b[39;49;00mname\u001b[33m}\u001b[39;49;00m\u001b[33m.pickle\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)), recursive=\u001b[94mTrue\u001b[39;49;00m)[\u001b[94m0\u001b[39;49;00m]\n",
+      "\u001b[1m\u001b[31mE       IndexError: list index out of range\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31m/home/aheggs/.pyenv/versions/3.10.6/envs/lewagon/lib/python3.10/site-packages/nbresult/__init__.py\u001b[0m:105: IndexError\n",
+      "\u001b[31m\u001b[1m_____________________ TestOil.test_df_has_the_right_index ______________________\u001b[0m\n",
+      "\u001b[1m\u001b[31m/home/aheggs/.pyenv/versions/3.10.6/envs/lewagon/lib/python3.10/site-packages/nbresult/__init__.py\u001b[0m:88: in setUp\n",
+      "    result_file = _locate_pickle(name)\n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
+      "\n",
+      "name = 'oil'\n",
+      "\n",
+      "    \u001b[94mdef\u001b[39;49;00m \u001b[92m_locate_pickle\u001b[39;49;00m(name):\n",
+      "        \u001b[33m'''Find pickle file based on its name.\u001b[39;49;00m\n",
+      "    \u001b[33m    Assumes unicity of pickle name from first `tests` parent folder above cwd\u001b[39;49;00m\n",
+      "    \u001b[33m    '''\u001b[39;49;00m\n",
+      "        cwd = os.getcwd()\n",
+      "    \n",
+      "        \u001b[94mwhile\u001b[39;49;00m \u001b[95mnot\u001b[39;49;00m os.path.isdir(os.path.join(cwd, \u001b[33m'\u001b[39;49;00m\u001b[33mtests\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)):\n",
+      "            cwd = os.path.dirname(cwd)\n",
+      "            \u001b[94mif\u001b[39;49;00m cwd == os.sep:\n",
+      "                \u001b[94mraise\u001b[39;49;00m \u001b[96mNameError\u001b[39;49;00m(\n",
+      "                    \u001b[33m\"\u001b[39;49;00m\u001b[33mCould not find /tests directory in any parent folder\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)\n",
+      "    \n",
+      ">       pickle_path = glob.glob(\n",
+      "            os.path.abspath(os.path.join(cwd, \u001b[33m'\u001b[39;49;00m\u001b[33m**\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[33mf\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\u001b[33m{\u001b[39;49;00mname\u001b[33m}\u001b[39;49;00m\u001b[33m.pickle\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)), recursive=\u001b[94mTrue\u001b[39;49;00m)[\u001b[94m0\u001b[39;49;00m]\n",
+      "\u001b[1m\u001b[31mE       IndexError: list index out of range\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31m/home/aheggs/.pyenv/versions/3.10.6/envs/lewagon/lib/python3.10/site-packages/nbresult/__init__.py\u001b[0m:105: IndexError\n",
+      "\u001b[31m\u001b[1m_____________________ TestOil.test_df_has_the_right_shape ______________________\u001b[0m\n",
+      "\u001b[1m\u001b[31m/home/aheggs/.pyenv/versions/3.10.6/envs/lewagon/lib/python3.10/site-packages/nbresult/__init__.py\u001b[0m:88: in setUp\n",
+      "    result_file = _locate_pickle(name)\n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
+      "\n",
+      "name = 'oil'\n",
+      "\n",
+      "    \u001b[94mdef\u001b[39;49;00m \u001b[92m_locate_pickle\u001b[39;49;00m(name):\n",
+      "        \u001b[33m'''Find pickle file based on its name.\u001b[39;49;00m\n",
+      "    \u001b[33m    Assumes unicity of pickle name from first `tests` parent folder above cwd\u001b[39;49;00m\n",
+      "    \u001b[33m    '''\u001b[39;49;00m\n",
+      "        cwd = os.getcwd()\n",
+      "    \n",
+      "        \u001b[94mwhile\u001b[39;49;00m \u001b[95mnot\u001b[39;49;00m os.path.isdir(os.path.join(cwd, \u001b[33m'\u001b[39;49;00m\u001b[33mtests\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)):\n",
+      "            cwd = os.path.dirname(cwd)\n",
+      "            \u001b[94mif\u001b[39;49;00m cwd == os.sep:\n",
+      "                \u001b[94mraise\u001b[39;49;00m \u001b[96mNameError\u001b[39;49;00m(\n",
+      "                    \u001b[33m\"\u001b[39;49;00m\u001b[33mCould not find /tests directory in any parent folder\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)\n",
+      "    \n",
+      ">       pickle_path = glob.glob(\n",
+      "            os.path.abspath(os.path.join(cwd, \u001b[33m'\u001b[39;49;00m\u001b[33m**\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[33mf\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\u001b[33m{\u001b[39;49;00mname\u001b[33m}\u001b[39;49;00m\u001b[33m.pickle\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)), recursive=\u001b[94mTrue\u001b[39;49;00m)[\u001b[94m0\u001b[39;49;00m]\n",
+      "\u001b[1m\u001b[31mE       IndexError: list index out of range\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31m/home/aheggs/.pyenv/versions/3.10.6/envs/lewagon/lib/python3.10/site-packages/nbresult/__init__.py\u001b[0m:105: IndexError\n",
+      "\u001b[31m\u001b[1m_____________________ TestOil.test_df_has_the_right_values _____________________\u001b[0m\n",
+      "\u001b[1m\u001b[31m/home/aheggs/.pyenv/versions/3.10.6/envs/lewagon/lib/python3.10/site-packages/nbresult/__init__.py\u001b[0m:88: in setUp\n",
+      "    result_file = _locate_pickle(name)\n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ \n",
+      "\n",
+      "name = 'oil'\n",
+      "\n",
+      "    \u001b[94mdef\u001b[39;49;00m \u001b[92m_locate_pickle\u001b[39;49;00m(name):\n",
+      "        \u001b[33m'''Find pickle file based on its name.\u001b[39;49;00m\n",
+      "    \u001b[33m    Assumes unicity of pickle name from first `tests` parent folder above cwd\u001b[39;49;00m\n",
+      "    \u001b[33m    '''\u001b[39;49;00m\n",
+      "        cwd = os.getcwd()\n",
+      "    \n",
+      "        \u001b[94mwhile\u001b[39;49;00m \u001b[95mnot\u001b[39;49;00m os.path.isdir(os.path.join(cwd, \u001b[33m'\u001b[39;49;00m\u001b[33mtests\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)):\n",
+      "            cwd = os.path.dirname(cwd)\n",
+      "            \u001b[94mif\u001b[39;49;00m cwd == os.sep:\n",
+      "                \u001b[94mraise\u001b[39;49;00m \u001b[96mNameError\u001b[39;49;00m(\n",
+      "                    \u001b[33m\"\u001b[39;49;00m\u001b[33mCould not find /tests directory in any parent folder\u001b[39;49;00m\u001b[33m\"\u001b[39;49;00m)\n",
+      "    \n",
+      ">       pickle_path = glob.glob(\n",
+      "            os.path.abspath(os.path.join(cwd, \u001b[33m'\u001b[39;49;00m\u001b[33m**\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m, \u001b[33mf\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m\u001b[33m{\u001b[39;49;00mname\u001b[33m}\u001b[39;49;00m\u001b[33m.pickle\u001b[39;49;00m\u001b[33m'\u001b[39;49;00m)), recursive=\u001b[94mTrue\u001b[39;49;00m)[\u001b[94m0\u001b[39;49;00m]\n",
+      "\u001b[1m\u001b[31mE       IndexError: list index out of range\u001b[0m\n",
+      "\n",
+      "\u001b[1m\u001b[31m/home/aheggs/.pyenv/versions/3.10.6/envs/lewagon/lib/python3.10/site-packages/nbresult/__init__.py\u001b[0m:105: IndexError\n",
+      "=========================== short test summary info ============================\n",
+      "FAILED tests/test_merged_dataframes.py::TestMergedDataframes::test_merged_df_has_the_right_shape\n",
+      "FAILED tests/test_merged_dataframes.py::TestMergedDataframes::test_yearly_oil_value_2009\n",
+      "FAILED tests/test_oil.py::TestOil::test_df_has_the_right_index - IndexError: ...\n",
+      "FAILED tests/test_oil.py::TestOil::test_df_has_the_right_shape - IndexError: ...\n",
+      "FAILED tests/test_oil.py::TestOil::test_df_has_the_right_values - IndexError:...\n",
+      "\u001b[31m========================= \u001b[31m\u001b[1m5 failed\u001b[0m, \u001b[32m5 passed\u001b[0m\u001b[31m in 0.34s\u001b[0m\u001b[31m ==========================\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "make: *** [Makefile:7: pytest] Error 1\r\n"
+     ]
+    }
+   ],
    "source": [
     "!make"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 1e34d0e] completed 1.5\n",
+      " 2 files changed, 75 insertions(+), 168 deletions(-)\n",
+      "Enumerating objects: 7, done.\n",
+      "Counting objects: 100% (7/7), done.\n",
+      "Delta compression using up to 8 threads\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (4/4), 1.36 KiB | 1.36 MiB/s, done.\n",
+      "Total 4 (delta 3), reused 0 (delta 0), pack-reused 0 (from 0)\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
+      "To github.com:andyheggs/data-us-oil-and-gas-production.git\n",
+      "   ce2538b..1e34d0e  master -> master\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git add -A\n",
+    "!git commit -m \"completed 1.5\"\n",
+    "!git push origin master"
+   ]
   }
  ],
  "metadata": {
