Completed oil step

--- a/oil_and_gas.ipynb
+++ b/oil_and_gas.ipynb
@@ -1428,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 69,
    "metadata": {
     "scrolled": true
    },
@@ -1579,13 +1579,15 @@
        "[3 rows x 36 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "file = \"data/U.S._crude_oil_production.csv\"\n",
+    "filtered_yearly_oil_df = yearly_oil_df[np.logical_and(yearly_oil_df.index > 2008, yearly_oil_df.index < 2018)]\n",
+    "\n",
     "oil_df = pd.read_csv(file, decimal=\",\")\n",
     "oil_df.head(3)\n",
     "\n",
@@ -1605,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1848,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1858,24 +1860,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'filtered_yearly_oil_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [71], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnbresult\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ChallengeResult\n\u001b[1;32m      3\u001b[0m result \u001b[38;5;241m=\u001b[39m ChallengeResult(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moil\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m----> 4\u001b[0m     filtered_oil_shape\u001b[38;5;241m=\u001b[39m\u001b[43mfiltered_yearly_oil_df\u001b[49m\u001b[38;5;241m.\u001b[39mshape,\n\u001b[1;32m      5\u001b[0m     filtered_oil_index_year\u001b[38;5;241m=\u001b[39mfiltered_yearly_oil_df\u001b[38;5;241m.\u001b[39mindex[\u001b[38;5;241m0\u001b[39m],\n\u001b[1;32m      6\u001b[0m     us_total\u001b[38;5;241m=\u001b[39mfiltered_yearly_oil_df\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m      7\u001b[0m )\n\u001b[1;32m      8\u001b[0m result\u001b[38;5;241m.\u001b[39mwrite()\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(result\u001b[38;5;241m.\u001b[39mcheck())\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'filtered_yearly_oil_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from nbresult import ChallengeResult\n",
+    "\n",
+    "result = ChallengeResult('oil',\n",
+    "    filtered_oil_shape=filtered_yearly_oil_df.shape,\n",
+    "    filtered_oil_index_year=filtered_yearly_oil_df.index[0],\n",
+    "    us_total=filtered_yearly_oil_df.iloc[0,0]\n",
+    ")\n",
+    "result.write()\n",
+    "\n",
+    "print(result.check())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master f38e137] Completed oil step\n",
-      " 1 file changed, 34 insertions(+), 9 deletions(-)\n",
+      "[master 166d7b5] Completed oil step\n",
+      " 1 file changed, 196 insertions(+), 18 deletions(-)\n",
       "Enumerating objects: 5, done.\n",
       "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 8 threads\n",
       "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 804 bytes | 804.00 KiB/s, done.\n",
+      "Writing objects: 100% (3/3), 1.87 KiB | 958.00 KiB/s, done.\n",
       "Total 3 (delta 2), reused 0 (delta 0), pack-reused 0 (from 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To github.com:andyheggs/data-us-oil-and-gas-production.git\n",
-      "   9ce2631..f38e137  master -> master\n"
+      "   1e34d0e..166d7b5  master -> master\n"
      ]
     }
    ],
@@ -1971,8 +2003,6 @@
     "total_gas = filtered_yearly_gas_df.filter(items=['U.S.'])\n",
     "total_gas.columns = [ 'Gas' ]\n",
     "display(total_gas.head(3))\n",
-    "\n",
-    "\n",
     "\n",
     "total_oil = filtered_yearly_oil_df.filter(items=['U.S. Crude Oil'])\n",
     "total_oil.columns = [ 'Crude Oil' ]\n",
