--- a/oil_and_gas_answers.ipynb
+++ b/oil_and_gas_answers.ipynb
@@ -2014,34 +2014,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.8.12, pytest-6.2.5, py-1.11.0, pluggy-1.0.0 -- /Users/davywai/.pyenv/versions/lewagon_data_staff/bin/python3\n",
-      "cachedir: .pytest_cache\n",
-      "rootdir: /Users/davywai/code/lewagon/data-solutions/02-Data-Toolkit/01-Data-Analysis/03-US-Oil-and-Gas-Production\n",
-      "plugins: anyio-3.4.0\n",
-      "\u001b[1mcollecting ... \u001b[0mcollected 3 items\n",
-      "\n",
-      "tests/test_oil.py::TestOil::test_df_has_the_right_index \u001b[32mPASSED\u001b[0m\u001b[32m           [ 33%]\u001b[0m\n",
-      "tests/test_oil.py::TestOil::test_df_has_the_right_shape \u001b[32mPASSED\u001b[0m\u001b[32m           [ 66%]\u001b[0m\n",
-      "tests/test_oil.py::TestOil::test_df_has_the_right_values \u001b[32mPASSED\u001b[0m\u001b[32m          [100%]\u001b[0m\n",
-      "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m3 passed\u001b[0m\u001b[32m in 0.16s\u001b[0m\u001b[32m ===============================\u001b[0m\n",
-      "\n",
-      "\n",
-      "💯 You can commit your code:\n",
-      "\n",
-      "\u001b[1;32mgit\u001b[39m add tests/oil.pickle\n",
-      "\n",
-      "\u001b[32mgit\u001b[39m commit -m \u001b[33m'Completed oil step'\u001b[39m\n",
-      "\n",
-      "\u001b[32mgit\u001b[39m push origin master\n"
+     "ename": "NameError",
+     "evalue": "name 'filtered_yearly_oil_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [3], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnbresult\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ChallengeResult\n\u001b[1;32m      3\u001b[0m result \u001b[38;5;241m=\u001b[39m ChallengeResult(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124moil\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m----> 4\u001b[0m     filtered_oil_shape\u001b[38;5;241m=\u001b[39m\u001b[43mfiltered_yearly_oil_df\u001b[49m\u001b[38;5;241m.\u001b[39mshape,\n\u001b[1;32m      5\u001b[0m     filtered_oil_index_year\u001b[38;5;241m=\u001b[39mfiltered_yearly_oil_df\u001b[38;5;241m.\u001b[39mindex[\u001b[38;5;241m0\u001b[39m],\n\u001b[1;32m      6\u001b[0m     us_total\u001b[38;5;241m=\u001b[39mfiltered_yearly_oil_df\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m      7\u001b[0m )\n\u001b[1;32m      8\u001b[0m result\u001b[38;5;241m.\u001b[39mwrite()\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(result\u001b[38;5;241m.\u001b[39mcheck())\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'filtered_yearly_oil_df' is not defined"
      ]
     }
    ],
